css/userChrome.css
/* ... */
/* === COHESION === */
/* Based on code by https://github.com/TheBigWazz */

.sidebar-panel {
  background: transparent !important;
  font-weight: 600 !important;
  opacity: 0.7 !important;
}

/* Transparent Normal Sidebar background */
#sidebar-box {
  background: rgba(255, 255, 255, 0) !important;
}

/* Transparent Bookmark bar */
#PersonalToolbar:not([collapsed="true"]) {
  padding-bottom: 6px;
  margin-right: 6px !important;
  margin-left: 1px !important;
  background: light-dark(rgba(255,255,255,0.11), rgba(0, 0, 0, 0.2)) !important;
}

/* Transparent Findbar */
findbar {
  background: none !important;
  border-top: none !important;
}

/* Cleaned & Transparent Sidebar */
#sidebar-box {
  background-color: light-dark(rgba(255,255,255,0.11), rgba(0, 0, 0, 0.2)) !important;
  border: none !important;

  & #sidebar-header {
    border-bottom: none !important;

    & #sidebar-close {
      display: none !important;
    }
  }
}

/* Transparent Search box in sidebar */
#sidebar-search-container > #search-box,
#viewButton {
  padding: 4px 8px !important;

  appearance: none !important;
  background-color: transparent !important;
  border-radius: 10px !important;
  border: none !important;

  &:hover {
    background-color: rgba(255, 255, 255, 0.1) !important;
  }

  &:active {
    background-color: rgba(255, 255, 255, 0.1) !important;
  }
}

/* Hide the Normal Sidebar Border */
#sidebar-header {
  font-size: 1.333em;
  padding: 5px !important;
  border-bottom: 0 solid var(--sidebar-border-color) !important;
}


/* === BLUR COMPACT SIDEBAR === */
/* Based on code by https://github.com/Tanay-Kar */

:root[zen-compact-mode="true"] {
  #navigator-toolbox #titlebar {
    width: 100%;
    backdrop-filter: blur(30px) brightness(70%) !important;
  }
}

#zen-sidebar-web-panel-wrapper {
  background: #00000040 !important;
  backdrop-filter: blur(40px) !important;
}

